# ctf-sleuth

./: .devenv.flake.nix  .dockerignore  .gitignore  .mcp.json  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  devenv.nix  justfile  pyproject.toml
.claude/skills/: README.md
.claude/skills/ai-threat-testing/: SKILL.md
.claude/skills/android-security/: SKILL.md
.claude/skills/api-security/: SKILL.md
.claude/skills/authentication/: SKILL.md
.claude/skills/blockchain-security/: SKILL.md
.claude/skills/blue-teamer/: SKILL.md
.claude/skills/bug-bounter/: SKILL.md
.claude/skills/client-side/: SKILL.md
.claude/skills/cloud-forensics/: SKILL.md
.claude/skills/cloud-pentester/: SKILL.md
.claude/skills/container-forensics/: SKILL.md
.claude/skills/coordination/: SKILL.md
.claude/skills/cve-exploitation/: SKILL.md
.claude/skills/detecting-kerberoasting-attacks/: SKILL.md
.claude/skills/detection-cloud-anomalies/: SKILL.md
.claude/skills/detection-web/: SKILL.md
.claude/skills/dfir/: SKILL.md
.claude/skills/disk-forensics/: SKILL.md
.claude/skills/endpoint-forensics/: SKILL.md
.claude/skills/essential-tools/: SKILL.md
.claude/skills/firmware-iot-security/: SKILL.md
.claude/skills/github-workflow/: SKILL.md
.claude/skills/hackerone/: SKILL.md
.claude/skills/hackthebox/: SKILL.md
.claude/skills/infrastructure/: SKILL.md
.claude/skills/injection/: SKILL.md
.claude/skills/ioc-hunting/: SKILL.md
.claude/skills/ios-security/: SKILL.md
.claude/skills/kubernetes-security/: SKILL.md
.claude/skills/memory-analysis/: SKILL.md
.claude/skills/network-analyzer/: SKILL.md
.claude/skills/network-hunter/: SKILL.md
.claude/skills/osint/: SKILL.md
.claude/skills/patt-fetcher/: SKILL.md
.claude/skills/performing-cryptographic-audit-of-application/: SKILL.md
.claude/skills/performing-ssl-tls-security-assessment/: SKILL.md
.claude/skills/phishing-investigation/: SKILL.md
.claude/skills/reconnaissance/: SKILL.md
.claude/skills/red-teamer/: SKILL.md
.claude/skills/replay-attack/: SKILL.md
.claude/skills/reverse-engineering/: SKILL.md
.claude/skills/rootkit-analysis/: SKILL.md
.claude/skills/script-generator/: SKILL.md
.claude/skills/server-side/: SKILL.md
.claude/skills/social-engineering/: SKILL.md
.claude/skills/source-code-scanning/: SKILL.md
.claude/skills/subghz-sdr/: SKILL.md
.claude/skills/system/: SKILL.md
.claude/skills/techstack-identification/: SKILL.md
.claude/skills/testing-jwt-token-security/: SKILL.md
.claude/skills/testing-oauth2-implementation-flaws/: SKILL.md
.claude/skills/threat-intel/: SKILL.md
.claude/skills/web-app-logic/: SKILL.md
.claude/skills/web-bounty/: SKILL.md
.claude/skills/web-pentester/: SKILL.md
.claude/skills/wifi-security/: SKILL.md
scripts/: check-skill-overlap.py  check-test-layout.py
scripts/smoke/: Dockerfile.minimal-sandbox  smoke_artifact.py  smoke_level2.py  smoke_osint.py  smoke_osint_debug.py  smoke_sdk.py
src/cli/: bootstrap.py  dto.py  main.py
src/cli/command/: __init__.py  plan.py  run.py
src/contexts/artifact_analysis/: __init__.py  runner.py
src/contexts/ctf_challenge/: __init__.py  runner.py
src/contexts/htb_machine/: __init__.py  runner.py
src/contexts/osint_investigation/: __init__.py  runner.py
src/foundation/metrics/: __init__.py  accumulator.py  log.py  scope.py  session.py
src/foundation/skills/: __init__.py  registry.py
src/layers/artifact_inspector/: __init__.py  fs.py
src/layers/claude_sdk/: __init__.py  options.py  tool_hooks.py
src/layers/ctfd/: __init__.py  client.py  config.py  errors.py
src/layers/htb/: __init__.py  (+3 more)
tests/cli/: test_bootstrap.py  test_dto.py  test_main.py
(+282 files in other folders)
